Optimization: use Long interning to reduce memory footprint. cr:almann
[GF:2324416:BrazilPerforce://brazil/src/shared/platform/IonJava/mainline]